--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 <a href="https://www.facebook.com/EEE-project-solution-lab-107106394047092/" target="_nextTab" class="outer-shadow hover-in-shadow link-card" data-tilt data-tilt-scale="1.1"><i class="fab fa-facebook-f"></i></a>
                 <a href="#" target="_nextTab" class="outer-shadow hover-in-shadow link-card" data-tilt data-tilt-scale="1.1"><i class="fab fa-github"></i></a>
                 <a href="#" target="_nextTab" class="outer-shadow hover-in-shadow link-card" data-tilt data-tilt-scale="1.1"><i class="fab fa-linkedin"></i></a>
-                <a href="https://dribbble.com/hamzaveer786/" target="_nextTab" class="outer-shadow hover-in-shadow link-card" data-tilt data-tilt-scale="1.1"><i class="fab fa-dribbble"></i></a>
+                <a href="https://dribbble.com/adnan/" target="_nextTab" class="outer-shadow hover-in-shadow link-card" data-tilt data-tilt-scale="1.1"><i class="fab fa-dribbble"></i></a>
               </div>
             </div>
           <div class="about-info">
